feat: enhance development and production environments with new configurations and runtime management
- Add runtime directory management commands to Makefile for better
 organization and maintenance of runtime data.
- Update .dockerignore and .gitignore to include new environment and
 systemd files, ensuring unnecessary files are not included in builds
 or version control.
- Introduce a new SQL initialization script for Prosody XMPP server
 database, optimizing for PostgreSQL with necessary extensions and
 indexes.
- Refactor docker-compose files for both development and production
 environments, adding detailed comments, improving readability, and
 ensuring consistency across services.
- Add a new web interface for Converse.js, enabling a frontend for
 XMPP chat, which connects to the Prosody server.

These changes aim to improve the maintainability and flexibility of the
development and production environments, allowing for easier setup,
configuration, and management of the XMPP server and its components. The
introduction of Converse.js provides a user interface for chat
functionality, enhancing the overall user experience.

--- a/config/nginx-docker.conf.example
+++ b/config/nginx-docker.conf.example
@@ -1,7 +1,7 @@
-# Example nginx config for docker stack. Copy to deployment path if customizing.
+# Example nginx config for docker stack. Copy to config/nginx-docker.conf if customizing.
 # Defaults expect Prosody service name 'xmpp-prosody' and certs under /opt/xmpp.atl.chat/certs.
 
-# See deployment/reverse-proxy/nginx/nginx-docker.conf for the maintained version
+# This is the maintained version for use with the XMPP server
 
 user nginx;
 worker_processes auto;
