feat(dev-environment): enhance local development setup with nginx and converse.js
Update the development environment to improve local testing and
development capabilities. Change `PROSODY_HTTP_HOST` to include port
8080 for better alignment with local server configurations. Introduce
a new nginx configuration file `nginx-docker.dev.conf` to handle
localhost requests, providing a simplified setup for development and
testing. Add a new service `xmpp-conversejs-dev` in
`docker-compose.dev.yml` to serve the Converse.js web client, allowing
for easier testing of the XMPP client interface. Modify
`index.html` to automatically detect the environment and adjust
Converse.js configuration accordingly, ensuring seamless transitions
between local and production environments. These changes aim to
streamline the development process, making it easier to test and debug
locally.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -267,6 +267,49 @@ services:
       - xmpp_network_dev
 
   # ============================================================================
+  # CONVERSE.JS WEB CLIENT (Development)
+  # ============================================================================
+  xmpp-conversejs-dev:
+    image: nginx:stable-alpine
+    container_name: xmpp-conversejs-dev
+    hostname: xmpp-conversejs-dev
+    restart: unless-stopped
+    init: true
+
+    # Security configuration
+    security_opt:
+      - no-new-privileges:true
+      - apparmor:docker-default
+
+    # Logging configuration
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+        compress: "true"
+
+    # Port mapping
+    ports:
+      - '8083:80'  # Converse.js web interface
+
+    # Volume mounts
+    volumes:
+      - ./web/conversejs:/usr/share/nginx/html:ro
+
+    # Service dependencies
+    depends_on:
+      - xmpp-prosody-dev
+
+    # Network configuration
+    networks:
+      - xmpp_network_dev
+
+    # Graceful shutdown
+    stop_signal: SIGQUIT
+    stop_grace_period: 30s
+
+  # ============================================================================
   # LOG VIEWER - DOZZLE (Development)
   # ============================================================================
   xmpp-logs-dev:
@@ -309,7 +352,7 @@ services:
 
     # Volume mounts
     volumes:
-      - ./config/nginx-docker.conf:/etc/nginx/nginx.conf:ro
+      - ./config/nginx-docker.dev.conf:/etc/nginx/nginx.conf:ro
       - ./.runtime/certs:/opt/xmpp.atl.chat/certs:ro
 
     # Service dependencies
