--- a/.env.development
+++ b/.env.development
@@ -74,7 +74,7 @@ PROSODY_ALLOW_UNENCRYPTED_PLAIN_AUTH=true
 # NETWORKING & HTTP
 # ============================================================================
 # HTTP configuration
-PROSODY_HTTP_HOST=localhost
+PROSODY_HTTP_HOST=localhost:8080
 PROSODY_HTTP_SCHEME=http
 
 # TURN/STUN servers for audio/video calls
